# create-rust-app-template

./: .gitignore  Cargo.toml  Dockerfile  Makefile  init.sh
examples/: test.rs
src/: lib.rs  main.rs  test_module.rs  util.rs  util_test.rs
src/test/: mod.rs  test.rs  test1.rs
src/util/: calc.rs  mod.rs  say_hello_test.rs
tests/: integration_test.rs
