[package]
name = "create-rust-app-template"
version = "0.1.0"
authors = ["pefish <pefish@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.scripts]
build = "cargo build"
publish = "cargo exec build && cargo test && cargo publish --allow-dirty"
